			Java Electric change log ( MAIN branch )

NOTE: Please place changes under the version that will be released next.

************************* Version 8.04q: *********************************

************************* Version 8.04p: *********************************

IMP: (6/1/06, SMR) Preferences XML is now properly formatted.

IMP: (5/31/06, SMR) Sped up waveform window when sweeps are included or
     excluded (Bug #1078).

IMP: (5/31/06, SMR) Adding an analog signal to an existing panel scales
     the panel in Y (Bug #1079).

************************* Version 8.04o: *********************************

BUG: (5/31/06, SMR) GDS input may crash (Bug #1081).
FIX: In Export.newInstance(), check for invalid names BEFORE checking for
     unique names.

BUG: (5/31/06, RK) NCC: print correct Wire counts in Part local partitioning mismatch diagnostics (Bugzilla# 1080)

BUG: (5/31/06, SMR) "Back" and "Forward" buttons don't handle "down in place"
     editing (Bug #1060).
FIX: In EditWindow, handle down-in-place data with other factors.

BUG: (5/31/06, RK) NCC: repair implementation of forced matching (Bugzilla# 713)

IMP: (5/31/06, SMR) "Select Object" now scrolls through the list as search
     text is typed. (Bug #965)

BUG: (5/30/06, GVG) Size interactively does not show preview highlight (Bug #1075).
FIX: SizeListener.java:mouseMoved() is active again (commented out in 1.34 version. Not clear why.

BUG: (5/30/06, DN) Client doesn't show fresh ExplorerTree on startup.
FIX: In ServerJobManager write latest snapshot on connection.
     In ClientJobManager show initial snapshot immediately.

BUG: (5/30/06, GVG) Include/Exclude options not working when more than 1 signal included a sweep (Bug #1077)
FIX: The code to retrieve the correct sweep of a given AnalogSignal was incorrect. Extra code and refactorization
to guarantee the correct index is retrieved from the Explorer. Disable direct access to Analysis.sweeps and WaveformWindow.sweepSignals
lists.
